--- a/jquery.autocomplete.css
+++ b/jquery.autocomplete.css
@@ -8,6 +8,11 @@
 .xdsoft_autocomplete{
 display:inline;
 position:relative;
+word-spacing: normal;
+text-transform: none;
+text-indent: 0px;
+text-shadow: none;
+text-align: start;
 }
 
 .xdsoft_autocomplete .xdsoft_input{
